<resources>
    <string name="app_name">Challenges</string>

    <!-- ================ HOME STRINGS ================-->
    <string name="txt_name" translatable="false"> Laura Oliveira</string>
    <string name="txt_description_home">
        Olá! Me chamo Laura Oliveira e estou criando este app para praticar os conhecimentos do curso Android Training Program
        que está sendo oferecido pela Google Portugal.
    </string>
    <string name="btn_home_next"> Próximo </string>

    <!-- ================ MENU INFO STRINGS ================-->
    <string name="txt_menu_info_icon_title"> Informações </string>
    <string name="btn_menu_android_training_program"> Android TRaining Program</string>
    <string name="btn_menu_info_me"> Informações Laura Oliveira</string>
    <string name="btn_menu_code">Código Fonte</string>

    <!-- ================ INFO ABOUT ME STRINGS ================-->
    <string name="btn_about_me_linkedin">Linkedin</string>
    <string name="btn_about_me_github">Github</string>
    <string name="btn_about_me_porfolio">Portfólio</string>
    <string name="btn_about_me_medium">Medium </string>

</resources>