<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoAboutMeActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InfoAboutMeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_about_me_profile"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:src="@mipmap/ic_foto_perfil">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_home_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_name"
            android:textAllCaps="true"
            android:textSize="16sp">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_link_about_me_linkedin"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_about_me_linkedin"
                android:text="@string/btn_about_me_linkedin"
                android:textColor="@color/txt_about_me_linkedin"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:onClick="infoLinkedin">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_link_about_me_github"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_about_me_github"
                android:text="@string/btn_about_me_github"
                android:textColor="@color/txt_about_me_github"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:onClick="infoGithub">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_link_about_me_portfolio"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_about_me_portfolio"
                android:text="@string/btn_about_me_porfolio"
                android:textColor="@color/txt_about_me_portfolio"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:onClick="infoPortfolio">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_link_about_me_medium"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_about_me_medium"
                android:text="@string/btn_about_me_medium"
                android:textColor="@color/txt_about_me_medium"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:onClick="infoMedium">
            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>