<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MenuActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_menu_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_info"
            android:background="@color/icon_info">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_menu_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="75dp"
            android:text="@string/txt_menu_info_icon_title"
            android:textAllCaps="true"
            android:textSize="16sp">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_android_training_program"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_menu_android_training_program"
                android:text="@string/btn_menu_android_training_program"
                android:textColor="@color/txt__menu_android_training_program"
                android:onClick="infoAndroidTraingProgram">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_info_about_me"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_menu_info_about_me"
                android:text="@string/btn_menu_info_me"
                android:textColor="@color/txt_menu_info_about_me"
                android:onClick="infoAboutMe">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menu_code"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/btn_menu_code"
                android:text="@string/btn_menu_code"
                android:textColor="@color/txt_menu_code"
                android:onClick="codeRepository">

            </com.google.android.material.button.MaterialButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>