<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/ic_foto_perfil">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="75dp"
            android:text="@string/txt_name"
            android:textAllCaps="true"
            android:textSize="16sp">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="75dp"
            android:layout_marginLeft="15dp"
            android:text="@string/txt_description_home"
            android:textAllCaps="true"
            android:textSize="16sp">
        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.circularreveal.CircularRevealRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_next_page"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_home_next"
                android:backgroundTint="@color/btn_home_next_page"
                android:onClick="nextPageMenu"
                android:textColor="@color/txt_home_next_page_color"
                >
            </com.google.android.material.button.MaterialButton>
        </com.google.android.material.circularreveal.CircularRevealRelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>